--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,36 @@
 body {
-  background-color: azure;
+  background-color: white;
+}
+.Header {
+  position: relative;
+  padding-left: 86%;
+  padding-top: 10px;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.87);
+}
+.Header img {
+  height: 24px;
+  width: 24px;
+  position: absolute;
+  padding-top: -99%;
+  color: rgba(0, 0, 0, 0.87);
+}
+#sign {
+  margin-left: 25px;
+  background-color: blue;
+  color: white;
+}
+.Header a {
+  padding-right: 10px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.87);
+}
+.Google img {
+  height: 200px;
+  width: 200 px;
+  padding-left: 40%;
+  margin-top: 8%;
+}
+.search {
+  align-items: center;
 }
