--- a/Styles/style.css
+++ b/Styles/style.css
@@ -29,8 +29,22 @@ body {
   height: 200px;
   width: 200 px;
   padding-left: 40%;
-  margin-top: 8%;
+  margin-top: 6%;
 }
-.search {
-  align-items: center;
+#text {
+  height: 40px;
+  width: 550px;
+  margin-left: 35%;
+  margin-top: 0;
+}
+.magnify {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+}
+.voice {
+  height: 15px;
+  width: 10px;
+  background-color: white;
+  position: absolute;
 }
