--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,5 +1,9 @@
 body {
   background-color: white;
+  font-size: 14px;
+  font-family: arial, sans-serif;
+  color: #222;
+  overflow: -moz-hidden-unscrollable;
 }
 .Header {
   position: relative;
@@ -9,16 +13,20 @@ body {
   color: rgba(0, 0, 0, 0.87);
 }
 .Header img {
-  height: 24px;
-  width: 24px;
+  height: 20px;
+  width: 20px;
   position: absolute;
   padding-top: -99%;
   color: rgba(0, 0, 0, 0.87);
 }
 #sign {
   margin-left: 25px;
-  background-color: blue;
+  background-color: #1a73e8;
   color: white;
+  border: none;
+  /* border: 1px solid transparent; */
+  border-radius: 4px 4px;
+  cursor: pointer;
 }
 .Header a {
   padding-right: 10px;
@@ -29,22 +37,105 @@ body {
   height: 200px;
   width: 200 px;
   padding-left: 40%;
-  margin-top: 6%;
+  margin-top: 3%;
 }
 #text {
   height: 40px;
   width: 550px;
-  margin-left: 35%;
+  margin-left: 34%;
   margin-top: 0;
+  text-indent: 45px;
+  border: 0.5px solid;
+  background-color: transparent;
+  border-color: grey;
+  border-radius: 50px 50px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  outline: 0;
 }
 .magnify {
   height: 20px;
   width: 20px;
   position: absolute;
+  margin-left: -35%;
+  margin-top: 13px;
 }
 .voice {
   height: 15px;
   width: 10px;
-  background-color: white;
+  background-color: transparent;
   position: absolute;
+  margin-left: -2%;
+  margin-top: 13px;
+}
+.buttons {
+  padding-left: 43%;
+  margin-top: 3%;
+}
+.buttons a {
+  text-decoration: none;
+  padding: 10px 16px;
+  border: 1px 0;
+  margin-right: 10px;
+  position: relative;
+  background-color: #f8f9fa;
+  border-radius: 4px;
+  color: #3c4043;
+  font-family: arial, sans-serif;
+  font-size: 14px;
+}
+.buttons a:hover {
+  /* border: 1px solid #333333; */
+  box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
+}
+.covid a {
+  text-decoration: none;
+  color: #1a0dab;
+}
+.covid {
+  padding-left: 43%;
+  padding-top: 2%;
+}
+.covid a:hover {
+  text-decoration: underline;
+}
+.lang {
+  padding-left: 35%;
+  padding-top: 2%;
+}
+.lang a {
+  text-decoration: none;
+  color: #1a0dab;
+  padding: 0 2px;
+}
+.lang a:hover {
+  text-decoration: underline;
+}
+
+.india {
+  margin-top: 8.6%;
+  margin-left: -6px;
+  margin-right: -6px;
+  padding: 1px 30px;
+  border-bottom: 1px solid #dadce0;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.54);
+  background-color: whitesmoke;
+}
+.footer {
+  margin-left: -6px;
+  margin-right: -6px;
+  padding: 15px 15px;
+  background-color: whitesmoke;
+  font-size: 15px;
+}
+.footer a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.footer .f {
+  margin-left: 58%;
+}
+.footer a {
+  padding-left: 20px;
 }
