--- a/Styles/style.css
+++ b/Styles/style.css
@@ -3,7 +3,6 @@ body {
   font-size: 14px;
   font-family: arial, sans-serif;
   color: #222;
-  overflow: -moz-hidden-unscrollable;
 }
 .Header {
   position: relative;
@@ -16,7 +15,7 @@ body {
   height: 20px;
   width: 20px;
   position: absolute;
-  padding-top: -99%;
+
   color: rgba(0, 0, 0, 0.87);
 }
 #sign {
@@ -24,9 +23,10 @@ body {
   background-color: #1a73e8;
   color: white;
   border: none;
-  /* border: 1px solid transparent; */
-  border-radius: 4px 4px;
+  border: 1px solid transparent;
+  border-radius: 4px;
   cursor: pointer;
+  padding: 2px 5px;
 }
 .Header a {
   padding-right: 10px;
@@ -124,7 +124,9 @@ body {
 .footer {
   margin-left: -6px;
   margin-right: -6px;
-  padding: 15px 15px;
+  /* padding: 15px 15px; */
+  padding-top: 15px;
+  padding-left: 15px;
   background-color: whitesmoke;
   font-size: 15px;
 }
