--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,5 @@
 body {
+  width: col-;
   background-color: white;
   font-size: 14px;
   font-family: arial, sans-serif;
@@ -127,6 +128,9 @@ body {
   /* padding: 15px 15px; */
   padding-top: 15px;
   padding-left: 15px;
+  padding-bottom: 8px;
+  margin-bottom: 0;
+
   background-color: whitesmoke;
   font-size: 15px;
 }
@@ -143,4 +147,45 @@ body {
 }
 .footer a:hover {
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 600px) {
+  /* For mobile phones: */
+  .Header {
+    width: 50%;
+  }
+  .Google img {
+    width: 60%;
+  }
+  #text {
+    width: 80%;
+  }
+  .magnify,
+  .voice {
+    display: none;
+  }
+  .buttons {
+    width: 70%;
+    font-size: 20px;
+  }
+  .covid,
+  .lang {
+    width: 100%;
+    padding-top: 20px;
+    font-size: 15px;
+  }
+  .footer {
+    width: 135%;
+    font-size: 10px;
+  }
+  body {
+    width: 80%;
+  }
+  .footer .f {
+    padding-left: 100px;
+    padding-top: 10%;
+  }
+  .india {
+    width: 125%;
+  }
 }
