--- a/Styles/style.css
+++ b/Styles/style.css
@@ -189,3 +189,93 @@ body {
     width: 125%;
   }
 }
+@media only screen and (max-width: 400px) {
+  /* For mobile phones: */
+  .Header {
+    width: -29%;
+    font-size: small;
+  }
+  .Google img {
+    width: 50%;
+    padding-left: 200px;
+  }
+  #text {
+    width: 80%;
+  }
+  .magnify,
+  .voice {
+    display: none;
+  }
+  .buttons {
+    width: 200%;
+    font-size: 10px;
+    padding-top: 10px;
+  }
+  .covid,
+  .lang {
+    width: 100%;
+    padding-top: 20px;
+    font-size: 10px;
+    padding-left: 180px;
+  }
+  .footer {
+    width: 150%;
+    font-size: 10px;
+  }
+  body {
+    width: 100%;
+  }
+  .footer .f {
+    padding-left: 100px;
+    padding-top: 10%;
+  }
+  .india {
+    width: 138%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  /* For mobile phones: */
+  .Header {
+    width: -29%;
+    font-size: small;
+  }
+  .Google img {
+    width: 50%;
+    padding-left: 500px;
+  }
+  #text {
+    width: 65%;
+    padding-left: 60px;
+  }
+  .magnify,
+  .voice {
+    /* display: none; */
+  }
+  .buttons {
+    width: 200%;
+    font-size: 10px;
+    padding-top: 10px;
+    padding-left: 500px;
+  }
+  .covid,
+  .lang {
+    width: 100%;
+    padding-top: 20px;
+    font-size: 10px;
+    padding-left: 500px;
+  }
+  .footer {
+    width: 100%;
+    font-size: 10px;
+  }
+  body {
+    width: 200%;
+  }
+  .footer .f {
+    padding-left: 200px;
+    padding-top: 10%;
+  }
+  .india {
+    width: 96%;
+  }
+}
