--- a/Styles/style.css
+++ b/Styles/style.css
@@ -7,7 +7,7 @@ body {
 }
 .Header {
   position: relative;
-  padding-left: 86%;
+  padding-left: 84.5%;
   padding-top: 10px;
   font-size: 15px;
   color: rgba(0, 0, 0, 0.87);
@@ -16,14 +16,16 @@ body {
   height: 20px;
   width: 20px;
   position: absolute;
+  padding-top: 4px;
 
   color: rgba(0, 0, 0, 0.87);
 }
 #sign {
-  margin-left: 25px;
+  margin-left: 28px;
   background-color: #1a73e8;
   color: white;
   border: none;
+  padding: 10px 5px;
   border: 1px solid transparent;
   border-radius: 4px;
   cursor: pointer;
@@ -113,7 +115,7 @@ body {
 }
 
 .india {
-  margin-top: 8.6%;
+  margin-top: 8%;
   margin-left: -6px;
   margin-right: -6px;
   padding: 1px 30px;
